<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="org.vargasoft.kirjakeyboard.SettingsActivity"
    tools:showIn="@layout/activity_settings"
    android:background="@drawable/xml_pergamen_repeatable">

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/xmlbutton_effect"
        android:onClick="setFontColor"
        android:text="@string/fontColor"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/xmlbutton_effect"
        android:onClick="setKeyColor"
        android:text="@string/backgroundColor"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/xmlbutton_effect"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/test"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center_horizontal" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="296dp"
        android:background="@drawable/xmlbutton_effect"
        android:onClick="switchTexture"
        android:text="@string/texture"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="261dp"
        android:layout_marginEnd="131dp"
        android:layout_marginStart="171dp"
        android:onClick="switchKeyHeight"
        android:text="Nagy gombok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        android:layout_marginRight="131dp"
        android:layout_marginLeft="171dp" />

    <Switch
        android:id="@+id/switch2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="223dp"
        android:layout_marginEnd="109dp"
        android:layout_marginStart="93dp"
        android:onClick="switchNumbersInMain"
        android:text="Számok a főképernyőn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch1"
        android:layout_marginRight="109dp"
        android:layout_marginLeft="93dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="202dp"
        android:layout_marginTop="150dp"
        android:text="A betűszín, háttérszín és textúrabeállítás a szögletes gombokat tartalmazó témára érvényes. A nagy gombok és a számok a főképernyőn beállítások érvényesítéséhez nyomd meg a VÁLT gombot a billentyűzeten! Egyszínű gombokért a háttérszín átlátszatlanságát állítsuk maximálisra."
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Switch
        android:id="@+id/switch3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="switchAutomataToUppercase"
        android:text="Automata kis/nagybetű váltás"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.078" />


</androidx.constraintlayout.widget.ConstraintLayout>
